# halt_and_catch_fire

./: CMakeLists.txt  CONTRIBUTING.md  README.md
src/: buffer_marker_hang.cc  buffer_marker_test.cc  common.cc  common.h  crash_compute.comp  crash_copy.cc  crash_shader_freed_memory.cc  ggp_common.h  hang_binary_timeline_semaphore_gpu.cc  hang_binary_timeline_semaphore_gpu_bind_sparse.cc  hang_host_event.cc  hang_host_event_multi_context.cc  hang_host_event_multi_device.cc  hang_host_event_reset.cc  hang_infinite_loop.cc  hang_infinite_loop_multi_queue.cc  hang_semaphore.cc  hang_timeline_semaphore_gpu.cc  hang_timeline_semaphore_host.cc  infinite_loop.comp  invalid_index.comp  invalid_local_array_index.cc  load_shader.cc  read_write.comp
